// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interviewer call history report with data matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
        class="breadcrumb"
      >
        <ol
          class="breadcrumb__items u-fs-s"
        >
          <li
            class="breadcrumb__item"
            id="breadcrumb-0"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Back
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="page__main u-mt-s"
        id="main-content"
      >
        <h1
          class="u-mb-m"
        >
          Run interviewer call history report
        </h1>
        <p
          aria-live="polite"
          class="u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            <time
              datetime="2000-01-01T10:00:00.000Z"
              title="2000-01-01 10:00"
            >
              2 days ago
            </time>
             (01/01/2000 10:00:00)
          </b>
        </p>
        <p
          class="u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <form
          action="#"
        >
          <fieldset
            class="fieldset"
          >
            <legend
              class="fieldset__legend"
            >
              Select survey
            </legend>
            <div
              class="radios__items"
              id="Survey TLA"
            >
              <p
                class="radios__item"
              >
                <span
                  class="radio"
                >
                  <input
                    checked=""
                    class="radio__input js-radio"
                    id="all"
                    initial_value="undefined"
                    name="Survey TLA"
                    type="radio"
                    value="undefined"
                  />
                  <label
                    class="radio__label "
                    for="all"
                    id="all-label"
                  >
                    Show all surveys
                  </label>
                </span>
              </p>
              <br />
              <p
                class="radios__item"
              >
                <span
                  class="radio"
                >
                  <input
                    class="radio__input js-radio"
                    id="lms"
                    initial_value="undefined"
                    name="Survey TLA"
                    type="radio"
                    value="lms"
                  />
                  <label
                    class="radio__label label--with-description"
                    for="lms"
                    id="lms-label"
                  >
                    LMS
                    <span
                      class="label__description radio__label--with-description"
                      id="white-label-description-hint"
                    >
                      Labour Market Survey
                    </span>
                  </label>
                </span>
              </p>
              <br />
              <p
                class="radios__item"
              >
                <span
                  class="radio"
                >
                  <input
                    class="radio__input js-radio"
                    id="opn"
                    initial_value="undefined"
                    name="Survey TLA"
                    type="radio"
                    value="opn"
                  />
                  <label
                    class="radio__label label--with-description"
                    for="opn"
                    id="opn-label"
                  >
                    OPN
                    <span
                      class="label__description radio__label--with-description"
                      id="white-label-description-hint"
                    >
                      Opinions and Lifestyle Survey
                    </span>
                  </label>
                </span>
              </p>
              <br />
            </div>
          </fieldset>
          <div
            class="field"
          >
            <label
              class="label "
              for="Interviewer ID"
            >
              Interviewer ID
            </label>
            <input
              class="input input--text input-type__input "
              id="Interviewer ID"
              name="Interviewer ID"
              type="text"
              value=""
            />
          </div>
          <div
            class="field"
          >
            <label
              class="label "
              for="Start date"
            >
              Start date
            </label>
            <input
              class="input input--text input-type__input "
              id="Start date"
              initial_value="2021-01-01"
              name="Start date"
              type="date"
              value="2021-01-01"
            />
          </div>
          <div
            class="field"
          >
            <label
              class="label "
              for="End date"
            >
              End date
            </label>
            <input
              class="input input--text input-type__input "
              id="End date"
              initial_value="2021-01-01"
              name="End date"
              type="date"
              value="2021-01-01"
            />
          </div>
          <br />
          <button
            class="btn "
            data-testid="submit-button"
            type="submit"
          >
            <span
              class="btn__inner"
            >
              Run
            </span>
          </button>
        </form>
        <br />
        <a
          download="interviewer-call-history-.csv"
          hidden=""
          href="data:text/csv;charset=utf-8,﻿\\"Interviewer\\",\\"Questionnaire\\",\\"Serial Number\\",\\"Call Start Time\\",\\"Call Length (Seconds)\\",\\"Call Result\\""
          target="_self"
        >
          Export report as Comma-Separated Values (CSV) file
        </a>
        <div
          class="panel panel--info panel--no-title  u-mt-m"
          hidden=""
        >
          <div
            class="panel__body "
          />
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
      class="breadcrumb"
    >
      <ol
        class="breadcrumb__items u-fs-s"
      >
        <li
          class="breadcrumb__item"
          id="breadcrumb-0"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Back
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="page__main u-mt-s"
      id="main-content"
    >
      <h1
        class="u-mb-m"
      >
        Run interviewer call history report
      </h1>
      <p
        aria-live="polite"
        class="u-fs-s u-mt-s"
      >
        Data in this report was last updated: 
        <b>
          <time
            datetime="2000-01-01T10:00:00.000Z"
            title="2000-01-01 10:00"
          >
            2 days ago
          </time>
           (01/01/2000 10:00:00)
        </b>
      </p>
      <p
        class="u-fs-s"
      >
        Data in this report only goes back to the last 12 months.
      </p>
      <form
        action="#"
      >
        <fieldset
          class="fieldset"
        >
          <legend
            class="fieldset__legend"
          >
            Select survey
          </legend>
          <div
            class="radios__items"
            id="Survey TLA"
          >
            <p
              class="radios__item"
            >
              <span
                class="radio"
              >
                <input
                  checked=""
                  class="radio__input js-radio"
                  id="all"
                  initial_value="undefined"
                  name="Survey TLA"
                  type="radio"
                  value="undefined"
                />
                <label
                  class="radio__label "
                  for="all"
                  id="all-label"
                >
                  Show all surveys
                </label>
              </span>
            </p>
            <br />
            <p
              class="radios__item"
            >
              <span
                class="radio"
              >
                <input
                  class="radio__input js-radio"
                  id="lms"
                  initial_value="undefined"
                  name="Survey TLA"
                  type="radio"
                  value="lms"
                />
                <label
                  class="radio__label label--with-description"
                  for="lms"
                  id="lms-label"
                >
                  LMS
                  <span
                    class="label__description radio__label--with-description"
                    id="white-label-description-hint"
                  >
                    Labour Market Survey
                  </span>
                </label>
              </span>
            </p>
            <br />
            <p
              class="radios__item"
            >
              <span
                class="radio"
              >
                <input
                  class="radio__input js-radio"
                  id="opn"
                  initial_value="undefined"
                  name="Survey TLA"
                  type="radio"
                  value="opn"
                />
                <label
                  class="radio__label label--with-description"
                  for="opn"
                  id="opn-label"
                >
                  OPN
                  <span
                    class="label__description radio__label--with-description"
                    id="white-label-description-hint"
                  >
                    Opinions and Lifestyle Survey
                  </span>
                </label>
              </span>
            </p>
            <br />
          </div>
        </fieldset>
        <div
          class="field"
        >
          <label
            class="label "
            for="Interviewer ID"
          >
            Interviewer ID
          </label>
          <input
            class="input input--text input-type__input "
            id="Interviewer ID"
            name="Interviewer ID"
            type="text"
            value=""
          />
        </div>
        <div
          class="field"
        >
          <label
            class="label "
            for="Start date"
          >
            Start date
          </label>
          <input
            class="input input--text input-type__input "
            id="Start date"
            initial_value="2021-01-01"
            name="Start date"
            type="date"
            value="2021-01-01"
          />
        </div>
        <div
          class="field"
        >
          <label
            class="label "
            for="End date"
          >
            End date
          </label>
          <input
            class="input input--text input-type__input "
            id="End date"
            initial_value="2021-01-01"
            name="End date"
            type="date"
            value="2021-01-01"
          />
        </div>
        <br />
        <button
          class="btn "
          data-testid="submit-button"
          type="submit"
        >
          <span
            class="btn__inner"
          >
            Run
          </span>
        </button>
      </form>
      <br />
      <a
        download="interviewer-call-history-.csv"
        hidden=""
        href="data:text/csv;charset=utf-8,﻿\\"Interviewer\\",\\"Questionnaire\\",\\"Serial Number\\",\\"Call Start Time\\",\\"Call Length (Seconds)\\",\\"Call Result\\""
        target="_self"
      >
        Export report as Comma-Separated Values (CSV) file
      </a>
      <div
        class="panel panel--info panel--no-title  u-mt-m"
        hidden=""
      >
        <div
          class="panel__body "
        />
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`interviewer call history report without data matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumb"
        class="breadcrumb"
      >
        <ol
          class="breadcrumb__items u-fs-s"
        >
          <li
            class="breadcrumb__item"
            id="breadcrumb-0"
          >
            <a
              class="breadcrumb__link"
              href="/"
            >
              Back
            </a>
            <svg
              class="svg-icon"
              focusable="false"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="page__main u-mt-s"
        id="main-content"
      >
        <h1
          class="u-mb-m"
        >
          Run interviewer call history report
        </h1>
        <p
          aria-live="polite"
          class="u-fs-s u-mt-s"
        >
          Data in this report was last updated: 
          <b>
            Invalid Date
          </b>
        </p>
        <p
          class="u-fs-s"
        >
          Data in this report only goes back to the last 12 months.
        </p>
        <form
          action="#"
        >
          <fieldset
            class="fieldset"
          >
            <legend
              class="fieldset__legend"
            >
              Select survey
            </legend>
            <div
              class="radios__items"
              id="Survey TLA"
            >
              <p
                class="radios__item"
              >
                <span
                  class="radio"
                >
                  <input
                    checked=""
                    class="radio__input js-radio"
                    id="all"
                    initial_value="undefined"
                    name="Survey TLA"
                    type="radio"
                    value="undefined"
                  />
                  <label
                    class="radio__label "
                    for="all"
                    id="all-label"
                  >
                    Show all surveys
                  </label>
                </span>
              </p>
              <br />
              <p
                class="radios__item"
              >
                <span
                  class="radio"
                >
                  <input
                    class="radio__input js-radio"
                    id="lms"
                    initial_value="undefined"
                    name="Survey TLA"
                    type="radio"
                    value="lms"
                  />
                  <label
                    class="radio__label label--with-description"
                    for="lms"
                    id="lms-label"
                  >
                    LMS
                    <span
                      class="label__description radio__label--with-description"
                      id="white-label-description-hint"
                    >
                      Labour Market Survey
                    </span>
                  </label>
                </span>
              </p>
              <br />
              <p
                class="radios__item"
              >
                <span
                  class="radio"
                >
                  <input
                    class="radio__input js-radio"
                    id="opn"
                    initial_value="undefined"
                    name="Survey TLA"
                    type="radio"
                    value="opn"
                  />
                  <label
                    class="radio__label label--with-description"
                    for="opn"
                    id="opn-label"
                  >
                    OPN
                    <span
                      class="label__description radio__label--with-description"
                      id="white-label-description-hint"
                    >
                      Opinions and Lifestyle Survey
                    </span>
                  </label>
                </span>
              </p>
              <br />
            </div>
          </fieldset>
          <div
            class="field"
          >
            <label
              class="label "
              for="Interviewer ID"
            >
              Interviewer ID
            </label>
            <input
              class="input input--text input-type__input "
              id="Interviewer ID"
              name="Interviewer ID"
              type="text"
              value=""
            />
          </div>
          <div
            class="field"
          >
            <label
              class="label "
              for="Start date"
            >
              Start date
            </label>
            <input
              class="input input--text input-type__input "
              id="Start date"
              initial_value="2000-01-03"
              name="Start date"
              type="date"
              value="2000-01-03"
            />
          </div>
          <div
            class="field"
          >
            <label
              class="label "
              for="End date"
            >
              End date
            </label>
            <input
              class="input input--text input-type__input "
              id="End date"
              initial_value="2000-01-03"
              name="End date"
              type="date"
              value="2000-01-03"
            />
          </div>
          <br />
          <button
            class="btn "
            data-testid="submit-button"
            type="submit"
          >
            <span
              class="btn__inner"
            >
              Run
            </span>
          </button>
        </form>
        <br />
        <a
          download="interviewer-call-history-.csv"
          hidden=""
          href="data:text/csv;charset=utf-8,﻿\\"Interviewer\\",\\"Questionnaire\\",\\"Serial Number\\",\\"Call Start Time\\",\\"Call Length (Seconds)\\",\\"Call Result\\""
          target="_self"
        >
          Export report as Comma-Separated Values (CSV) file
        </a>
        <div
          class="panel panel--info panel--no-title  u-mt-m"
          hidden=""
        >
          <div
            class="panel__body "
          />
        </div>
        <br />
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumb"
      class="breadcrumb"
    >
      <ol
        class="breadcrumb__items u-fs-s"
      >
        <li
          class="breadcrumb__item"
          id="breadcrumb-0"
        >
          <a
            class="breadcrumb__link"
            href="/"
          >
            Back
          </a>
          <svg
            class="svg-icon"
            focusable="false"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="page__main u-mt-s"
      id="main-content"
    >
      <h1
        class="u-mb-m"
      >
        Run interviewer call history report
      </h1>
      <p
        aria-live="polite"
        class="u-fs-s u-mt-s"
      >
        Data in this report was last updated: 
        <b>
          Invalid Date
        </b>
      </p>
      <p
        class="u-fs-s"
      >
        Data in this report only goes back to the last 12 months.
      </p>
      <form
        action="#"
      >
        <fieldset
          class="fieldset"
        >
          <legend
            class="fieldset__legend"
          >
            Select survey
          </legend>
          <div
            class="radios__items"
            id="Survey TLA"
          >
            <p
              class="radios__item"
            >
              <span
                class="radio"
              >
                <input
                  checked=""
                  class="radio__input js-radio"
                  id="all"
                  initial_value="undefined"
                  name="Survey TLA"
                  type="radio"
                  value="undefined"
                />
                <label
                  class="radio__label "
                  for="all"
                  id="all-label"
                >
                  Show all surveys
                </label>
              </span>
            </p>
            <br />
            <p
              class="radios__item"
            >
              <span
                class="radio"
              >
                <input
                  class="radio__input js-radio"
                  id="lms"
                  initial_value="undefined"
                  name="Survey TLA"
                  type="radio"
                  value="lms"
                />
                <label
                  class="radio__label label--with-description"
                  for="lms"
                  id="lms-label"
                >
                  LMS
                  <span
                    class="label__description radio__label--with-description"
                    id="white-label-description-hint"
                  >
                    Labour Market Survey
                  </span>
                </label>
              </span>
            </p>
            <br />
            <p
              class="radios__item"
            >
              <span
                class="radio"
              >
                <input
                  class="radio__input js-radio"
                  id="opn"
                  initial_value="undefined"
                  name="Survey TLA"
                  type="radio"
                  value="opn"
                />
                <label
                  class="radio__label label--with-description"
                  for="opn"
                  id="opn-label"
                >
                  OPN
                  <span
                    class="label__description radio__label--with-description"
                    id="white-label-description-hint"
                  >
                    Opinions and Lifestyle Survey
                  </span>
                </label>
              </span>
            </p>
            <br />
          </div>
        </fieldset>
        <div
          class="field"
        >
          <label
            class="label "
            for="Interviewer ID"
          >
            Interviewer ID
          </label>
          <input
            class="input input--text input-type__input "
            id="Interviewer ID"
            name="Interviewer ID"
            type="text"
            value=""
          />
        </div>
        <div
          class="field"
        >
          <label
            class="label "
            for="Start date"
          >
            Start date
          </label>
          <input
            class="input input--text input-type__input "
            id="Start date"
            initial_value="2000-01-03"
            name="Start date"
            type="date"
            value="2000-01-03"
          />
        </div>
        <div
          class="field"
        >
          <label
            class="label "
            for="End date"
          >
            End date
          </label>
          <input
            class="input input--text input-type__input "
            id="End date"
            initial_value="2000-01-03"
            name="End date"
            type="date"
            value="2000-01-03"
          />
        </div>
        <br />
        <button
          class="btn "
          data-testid="submit-button"
          type="submit"
        >
          <span
            class="btn__inner"
          >
            Run
          </span>
        </button>
      </form>
      <br />
      <a
        download="interviewer-call-history-.csv"
        hidden=""
        href="data:text/csv;charset=utf-8,﻿\\"Interviewer\\",\\"Questionnaire\\",\\"Serial Number\\",\\"Call Start Time\\",\\"Call Length (Seconds)\\",\\"Call Result\\""
        target="_self"
      >
        Export report as Comma-Separated Values (CSV) file
      </a>
      <div
        class="panel panel--info panel--no-title  u-mt-m"
        hidden=""
      >
        <div
          class="panel__body "
        />
      </div>
      <br />
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
